[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/core/AskInteger.gd" type="Script" id=1]
[ext_resource path="res://src/core/IntegerLineEdit.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 3
border_width_right = 3
border_color = Color( 2.2, 1.6, 3, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_top = 3
border_width_bottom = 3
border_color = Color( 1.5, 1.1, 2, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[node name="AskInteger" type="AcceptDialog"]
offset_right = 20.0
offset_bottom = 20.0
exclusive = true
window_title = "Please enter number"
dialog_hide_on_ok = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VecticalHighlights" type="Panel" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 174.0
offset_bottom = 32.0
mouse_filter = 2
theme_override_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorizontalHighlights" type="Panel" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 174.0
offset_bottom = 32.0
mouse_filter = 2
theme_override_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntegerLineEdit" type="LineEdit" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 174.0
offset_bottom = 32.0
caret_blink = true
caret_blink_interval = 0.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="confirmed" from="." to="." method="_on_AskInteger_confirmed"]
[connection signal="text_changed" from="IntegerLineEdit" to="IntegerLineEdit" method="_on_IntegerLineEdit_text_changed"]
[connection signal="text_submitted" from="IntegerLineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_submitted" from="IntegerLineEdit" to="IntegerLineEdit" method="_on_IntegerLineEdit_text_entered"]
